# bedrockNoobPOC

./: .gitignore  Makefile  README.md  docker-compose.template.yml  docker-compose.yml  main.py
.jenkins/: CREDENTIALS.md  Jenkinsfile  README.md
agent/: .env.example  Dockerfile  README.md  __init__.py  agent.py  app.py  mcp_client.py  pyproject.toml
agent/config/: __init__.py  config.py
agent/memory/: __init__.py  short_term_memory.py
agent/memory/mongodb/: __init__.py  conversation_repository.py  memory_adapter.py  mongo_client.py
agent/prompts/: bedrock_rag_agent_prompt.py
agent/routes/: v1.py
mcp_servers/bedrock_rag/: .env.example  Dockerfile  README.md  bedrockRag_mcp_server.py  pyproject.toml
mcp_servers/bedrock_rag/config/: __init__.py  config.py
mcp_servers/bedrock_rag/core/: __init__.py  bedrock_retriever_client.py
mcp_servers/bedrock_rag/retriever/: __init__.py  knowledge_base_retriever.py
mcp_servers/bedrock_rag/tools/: __init__.py  bedrock_rag_handler.py
mcp_servers/mongodb/: .dockerignore  .env.example  Dockerfile  README.md  mongodb_mcp_server.py  pyproject.toml
mcp_servers/mongodb/config/: __init__.py  config.py  constants.py
mcp_servers/mongodb/core/: __init__.py  mongodb_client.py
mcp_servers/mongodb/tools/: __init__.py  conversation_handler.py
